--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1302,15 +1302,13 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Statistiche</string>
   <string name="InsightsDashboardFragment__title">Statistiche</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">Il %1$d%% dei tuoi messaggi in uscita negli ultimi 7 giorni sono stati crittografati end-to-end con il Protocollo Signal.</string> -->
-  <string name="InsightsDashboardFragment__boost_your_signal">Aumenta il tuo Signal</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Il tuo Signal è potente</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Nessun Signal (ancora)</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Hai appena iniziato. Le statistiche saranno visualizzate dopo che hai inviato alcuni messaggi.</string> -->
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Il Protocollo Signal ha automaticamente protetto il %1$d%% dei tuoi messaggi in uscita negli ultimi %2$d giorni. Le conversazioni tra utenti Signal sono sempre crittografate end-to-end.</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Potenzia Signal</string>
+  <string name="InsightsDashboardFragment__not_enough_data">Dati non sufficienti</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">La tua percentuale nelle statistiche viene calcolata basandosi sui messaggi in uscita negli ultimi %1$d giorni che non sono scomparsi o stati eliminati.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Inizia una conversazione</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">L\'avanzata tecnologia di protezione della privacy di Signal ha automaticamente protetto tutti i tuoi recenti messaggi in uscita.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Inizia a comunicare in modo sicuro e attiva nuove funzionalità che vanno oltre le limitazioni dei messaggi SMS non criptati invitando più contatti a unirsi a Signal.</string>
-  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Questa statistica è generata localmente sul tuo dispositivo e può essere vista solo da te. Non è mai trasmessa da nessuna parte.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Queste statistiche sono generate localmente sul tuo dispositivo e possono essere viste solo da te. Non sono mai trasmesse da nessuna parte.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Messaggi criptati</string>
   <string name="InsightsDashboardFragment__cancel">Annulla</string>
   <string name="InsightsDashboardFragment__send">Invia</string>
