--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1307,15 +1307,13 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Inzichten</string>
   <string name="InsightsDashboardFragment__title">Inzichten</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% van je verzonden berichten van de afgelopen 7 dagen waren eind-tot-eind-versleuteld met het Signal Protocol.</string> -->
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">%1$d%% van je verzonden berichten over de afgelopen %2$d werden automatisch beschermd door het Signal Protocol. Gesprekken tussen Signal-gebruikers zijn altijd eind-tot-eind-versleuteld.</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Je kunt meer gesprekken beveiligd voeren</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Je gebruikt Signal optimaal</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Je maakt nog geen gebruik van beveiligde Signal-gesprekken</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Je bent pas net begonnen. Inzichten zullen worden weergeven nadat je een aantal berichten hebt verzonden.</string> -->
+  <string name="InsightsDashboardFragment__not_enough_data">Niet genoeg gegevens</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Je inzichten-percentage wordt berekend op basis van berichten welke je hebt verzonden in de afgelopen %1$d dagen welke zichzelf niet hebben gewist en niet door jou zijn gewist.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Begin een gesprek</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Signal beschermde automatisch al je recent verzonden berichten.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Communiceer voortaan beveiligd en maak nieuwe functies mogelijk welke verder gaan dan de limitaties van onversleutelde sms-berichten, door meer contactpersonen uit te nodigen om Signal te gebruiken.</string>
-  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Deze statistiek is lokaal gegenereerd op jouw apparaat en kan alleen door jou gezien worden. Het wordt nooit verzonden.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Deze statistiek is lokaal gegenereerd op jouw apparaat en kan alleen door jou gezien worden. Ze wordt nooit verzonden.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Versleutelde berichten</string>
   <string name="InsightsDashboardFragment__cancel">Annuleren</string>
   <string name="InsightsDashboardFragment__send">Verzend</string>
