--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -1299,15 +1299,13 @@
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Prirje</string>
   <string name="InsightsDashboardFragment__title">Prirje</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% e mesazheve tuaj ikës në 7 ditët e fundit qen të fshehtëzuara skaj-më-skaj me Protokollin Signal.</string> -->
-  <string name="InsightsDashboardFragment__boost_your_signal">Fuqizoni Signal-in tuaj</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Signal-i juaj është i Fortë</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">(Ende) Pa Signal</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Sapo po filloni. Prirjet do të shfaqen pasi të dërgoni ca mesazhe.</string> -->
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Protokolli Signal mbrojti automatikisht %1$d%% të mesazheve tuaj ikës gjatë %2$d ditëve të kaluara. Bisedat mes përdoruesve të Signal-it fshehtëzohen përherë skaj-më-skaj.</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Fuqizim Signal-i</string>
+  <string name="InsightsDashboardFragment__not_enough_data">Pa të dhëna të mjaftueshme</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Përqindja juaj për Prirjet llogaritet bazuar në mesazhet ikës brenda %1$d ditëve të kaluara që nuk janë zhdukur apo fshirë.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Nisni një bisedë</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Teknologjia Signal, që ruan privatësinë, ka mbrojtur automatikisht krejt mesazhet tuaj ikës së fundi.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Filloni të komunikoni në mënyrë të parrezik dhe aktivizoni veçorit të reja që shkojnë tej kufizimeve të mesazheve SMS të pafshehtëzuar, duke ftuar më tepër kontakte të bëhen pjesë e Signal-it.</string>
-  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Kjo statistikë qe prodhuar lokalisht dhe mund të shihet vetëm nga ju. Nuk transmetohet kurrë gjetkë.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Këto statistika u prodhuan lokalisht në pajisjen tuaj dhe mund të shihen vetëm nga ju. Nuk transmetohen kurrë diku.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Mesazhe të fshehtëzuar</string>
   <string name="InsightsDashboardFragment__cancel">Anuloje</string>
   <string name="InsightsDashboardFragment__send">Dërgoje</string>
