--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1270,28 +1270,26 @@
   <string name="trimmer__old_messages_successfully_deleted">已完成刪除舊訊息</string>
   <!--Insights-->
   <string name="Insights__percent">%</string>
-  <string name="Insights__title">Insights</string>
-  <string name="InsightsDashboardFragment__title">Insights</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">在過去7天中，你傳出的%1$d%%封訊息已使用 Signal 協定使用了點對點加密。</string> -->
-  <string name="InsightsDashboardFragment__boost_your_signal">加速你的 Signal</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">你的 Signal  很安全</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">(還)沒有 Signal</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">你才剛剛開始使用。 發送一些訊息後，將顯示Insights功能。</string> -->
+  <string name="Insights__title">統計</string>
+  <string name="InsightsDashboardFragment__title">統計</string>
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">Signal 協定自動保護%1$d%%你的過去%2$d天傳出的訊息。 Signal使用者之間的對話始終是點對點加密的。</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Signal 加速</string>
+  <string name="InsightsDashboardFragment__not_enough_data">沒有足夠的資料</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">你的統計百分比是根據過去%1$d天內尚未銷毀或刪除的出訊息計算得出的。</string>
   <string name="InsightsDashboardFragment__start_a_conversation">開啟一個對話</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Signal的進階隱私保護技術可自動保護你最近發出的所有訊息。</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">透過邀請更多聯絡人加入Signal，開始安全地通訊並啟用超越未加密 SMS 訊息限制的新功能。</string>
-  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">此統計資訊是在你的裝置上產生的，只有你自己可以看到。 它不會傳輸到任何地方。</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">這些統計資料是在你的裝置上產生的，只能由你查看。 它們永遠傳輸到任何地方。</string>
   <string name="InsightsDashboardFragment__encrypted_messages">已加密的訊息</string>
   <string name="InsightsDashboardFragment__cancel">取消</string>
   <string name="InsightsDashboardFragment__send">傳送</string>
-  <string name="InsightsModalFragment__title">介紹 Insights</string>
+  <string name="InsightsModalFragment__title">介紹 統計</string>
   <string name="InsightsModalFragment__description">找出安全傳送的訊息數量，然後迅速邀請新聯絡人提高 Signal 比例。</string>
-  <string name="InsightsModalFragment__view_insights">檢視 Insights</string>
+  <string name="InsightsModalFragment__view_insights">檢視 統計</string>
   <string name="FirstInviteReminder__title">邀請至 Signal</string>
   <string name="FirstInviteReminder__description">你可以透過%1$d%%來增加你傳送加密訊息的數量</string>
   <string name="SecondInviteReminder__title">加速你的 Signal</string>
   <string name="SecondInviteReminder__description">邀請 %1$s</string>
-  <string name="InsightsReminder__view_insights">檢視 Insights</string>
+  <string name="InsightsReminder__view_insights">檢視 統計</string>
   <string name="InsightsReminder__invite">邀請</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">傳輸圖示</string>
