--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1306,13 +1306,11 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Estadística</string>
   <string name="InsightsDashboardFragment__title">Estadística</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% de tus mensajes enviados en los últimos 7 días fueron cifrados con el protocolo de Signal.</string> -->
-  <string name="InsightsDashboardFragment__boost_your_signal">Mejora tu Signatura</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Tu Signatura es sólida</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Sin Signatura (todavía)</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Todavía estás comenzando. Las estadística se mostrará tras enviar algunos mensajes.</string> -->
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">El protocolo de Signal ha cifrado automáticamente %1$d%% de tus mensajes enviados en los últimos %2$d días. Chats entre usuarios de Signal siempre están cifrados.</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Mejora con Signal</string>
+  <string name="InsightsDashboardFragment__not_enough_data">No hay datos suficientes</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">El porcentaje de esta estadística se calcula con los mensajes enviados durante los últimos %1$d días que no han desaparecido o se han eliminado.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Comenza un chat</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">La tecnología de Signal proteje automáticamente tu privacidad en todos los mensajes que envías.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Comienza a comunicarte de manera segura con las características de Signal que van más allá de SMS sin cifrar e invita contactos a chatear contigo con Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Esta cifra se ha generado en este dispositivo y sólo tú puedes verla. No se envía a ningún servidor.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Mensajes cifrados</string>
