--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -1356,15 +1356,13 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="Insights__percent">%</string>
   <string name="Insights__title">Pregled</string>
   <string name="InsightsDashboardFragment__title">Pregled</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__tagline">%1$d%% vaših sporočil poslanih v zadnjih 7. dneh je bilo šifriranih \"od konca do konca\" z uporabo protokola Signal.</string> -->
+  <string name="InsightsDashboardFragment__signal_protocol_automatically_protected">S protokolom Signal ste avtomatično zaščitili %1$d%% vaših odhodnih sporočil v preteklih %2$d dneh. Pogovori med uporabniki Signala so zmerom zaščiteni \"od konca do konca\".</string>
   <string name="InsightsDashboardFragment__boost_your_signal">Razširite svoj Signal</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_title">Vaš Signal je Močen</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__no_signal_yet">Brez Signala (zaenkrat)</string> -->
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__youre_just_getting_started">Ste komaj začeli. Pregled bo na voljo potem, ko boste poslali nekaj sporočil.</string> -->
+  <string name="InsightsDashboardFragment__not_enough_data">Ni dovolj podatkov</string>
+  <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Pregled je narejen na podlagi vaših odhodnih sporočil v zadnjih %1$d dneh, z izjemo izginjajočih in izbrisanih.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Začni s pogovorom</string>
-  <!-- Removed by excludeNonTranslatables <string name="InsightsDashboardFragment__100_description">Z napredno tehnologijo za zaščito zasebnosti, Signal, so bila zaščitena prav vsa vaša v zadnjem času poslana sporočila.</string> -->
   <string name="InsightsDashboardFragment__invite_your_contacts">Začnite komunicirati varno in vklopite zasebnosti prijazne funkcije, ki sežejo prek omejitev nešifriranih sporočil SMS. Povabite več svojih stikov k uporabi aplikacije Signal.</string>
-  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Ta analiza je bila generirana lokalno na vaši napravi, lahko jo vidite le vi in ni posredovana nikamor.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Ta analiza je bila generirana lokalno na vaši napravi, lahko jo vidite le vi in ne bo posredovana nikamor.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Šifrirana sporočila</string>
   <string name="InsightsDashboardFragment__cancel">Prekliči</string>
   <string name="InsightsDashboardFragment__send">Pošlji</string>
